completed contact section inputs, alerts and submit button

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
-.App {
+/* .App {
   text-align: center;
+} */
+.header-bg{
+  background-color: #61dafb !important;
+  color: azure !important;
 }
-
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -35,4 +38,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
