--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,26 @@
-/* .App {
-  text-align: center;
-} */
+
 .header-bg{
   background-color: #61dafb !important;
   color: azure !important;
 }
-/* .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.portfolio-card{
+  width: 350px;
+  /* min-width: 250px; */
+  margin: 15px;
+}
+.card-wrap{
+  display: flex; 
+  flex-wrap: wrap;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.contact-input{
+  display:flex; 
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
 }
 
-.App-link {
-  color: #61dafb;
+.contact-input input{
+  display: block;
+  margin: 14px 0px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
