--- a/src/App.css
+++ b/src/App.css
@@ -113,3 +113,26 @@ BACKGROUNDS */
 }
 
 
+/* FOOTER */
+.footer{
+  background-color: #f9bb89;
+  padding-top: 20px;;
+}
+
+.footer-title{
+  font-family: 'Kalam', cursive;
+  text-align: center;
+}
+
+.footer-logos{
+  margin:10px;
+  padding: 10px;
+
+}
+
+
+.copyright{
+  font-family: 'Handlee', cursive;
+  text-align: center;
+}
+
